Add new Collection

--- a/CinemaApps.Solution/CinemaApps.Console/CinemaApps.Console.csproj
+++ b/CinemaApps.Solution/CinemaApps.Console/CinemaApps.Console.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Data.cs" />
     <Compile Include="Model\Hall.cs" />
     <Compile Include="Model\Movie.cs" />
+    <Compile Include="Model\MovieHall.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
